# RSS2Notion

./: CLAUDE.md  README.md  README_EN.md  README_TW.md  README_ZH.md  pyproject.toml
.github/workflows/: sync.yml
rss2notion/: __main__.py  get_favicon.py  models.py  rss.py  schema.py  sync.py
rss2notion/notion/: cleanup.py  client.py  schema.py  subscription.py
rss2notion/utils/: config.py  converter.py  get_favicon.py  html2notion_block.py
tools/: opml.py  test_feed_url.py
